[tool.poetry]
name = "caesar-cipher"
version = "0.1.0"
description = ""
authors = ["Kirk Garrison <Kirkgarrison24601@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
nltk = "^3.6.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.12b0", allow-prereleases = true}
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
